SSM-2800: Fixed by making the view length for Assertion Comments be longer in the preference dialog.  Also simplified the code for PreferencesDialog by using IDEA UI Designer to rebuild the dialog.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26538 219f1c6e-4a0e-43c8-96f2-6e749be13fd4